<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E1E1"
    android:orientation="vertical"
    tools:context=".activity.GameActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#E8E1E1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#E8E1E1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8DEDE"
            android:padding="10dp"
            android:text="@string/search"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/letterEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/checkBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check"
                android:background="@drawable/my_button"/>
        </LinearLayout>



        <TextView
            android:id="@+id/lettersTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/letters"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/chanceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/chance"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resetBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/newgame"
            android:background="@drawable/my_button"/>

    </LinearLayout>


</LinearLayout>